objects/L2I_Billing_IDs__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>Billable_Product_Rule_100_ID__c</fullName>
        <label>Billable Product Rule 100 ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billable_Product_Rule_ID__c</fullName>
        <label>Billable Product Rule ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billable_Product_Rule_Quarterly_ID__c</fullName>
        <label>Billable Product Rule Quarterly ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billable_Product_Rule_Semi_Annual_ID__c</fullName>
        <label>Billable Product Rule Semi-Annual ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billable_Product_Rule_Tri_Annual_ID__c</fullName>
        <label>Billable Product Rule Tri-Annual ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billable_Product_Treatment_ID__c</fullName>
        <label>Billable Product Treatment_ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quarterly_Treatment_ID__c</fullName>
        <label>Quarterly Treatment ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Semi_Annual_Treatment_ID__c</fullName>
        <label>Semi-Annual Treatment ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TB_Product_ID__c</fullName>
        <label>TB Product ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tri_Annual_Treatment_ID__c</fullName>
        <label>Tri-Annual Treatment ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X100_on_Activation_Treatment_ID__c</fullName>
        <label>100 on Activation Treatment ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>L2I Billing IDs</label>
</CustomObject>